# irdata

./: README.md  pyproject.toml
.github/workflows/: release.yml
irdata/: cmd.py  data.py  java.py  signatures.py  xmldata.py
