[tool.poetry]
name = "irdata"
version = "0.2.5"
description = "Data processing library for iRefIndex"
readme = "README.md"
authors = ["VIB Bioinformatics Core Facility <bits@vib.be>",
           "Ian Donaldson <ian.donaldson@biotek.uio.no>"]
repository = "https://github.com/vibbits/irdata"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"
pytest = "^7.0.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
